try to fix logo bigger than screen on mobile

--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,11 @@ h2 {
 }
 
 @media (max-width: 500px) {
+
+  .logomark {
+    max-width: 450px;
+  }
+
   .service-item, .service-subitem {
     flex-direction: column;
     align-items: flex-start;
